--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,8 +13,8 @@
 			</p>
 		<% } else { %>
 			<p>
-			<a href="/">Home</a> | 
-			<a href="/account">Profile</a> | 
+			<a href="/">Home</a>
+			<a href="/profile">Profile</a>
 			<a href="/logout">Log Out</a>
 			</p>
 		<% } %>
