--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -9,7 +9,10 @@
 
 <form action="/signup" method="post">
   <label>Username</label>
-  <input type="text" name="username">
+  <input type="username" name="username">
+
+  <label>Email</label>
+  <input type="email" name="email">
 
   <label>Password</label>
   <input type="password" name="password">
