--- a/views/login.html
+++ b/views/login.html
@@ -1,11 +1,8 @@
-<% layout('layout') -%>
+{% extends 'layout.html' %}
 
-<h1>Login</h1>
+{% block title %}Login{% endblock %}
 
-<% if (message) { %>
-  <p><%= message %></p>
-<% } %>
-
+{% block content %}
 <form action="/login" method="post">
   <label>Username</label>
   <input type="text" class="form-control" name="username">
@@ -14,3 +11,4 @@
   <input type="password" name="password">
   <button type="submit">Login</button>
 </form>
+{% endblock %}
