--- a/views/entry.html
+++ b/views/entry.html
@@ -1,19 +1,13 @@
 <html>
 <head>
   <title>linkr</title>
+  <style>body { background: #666; }</style>
   <script src="/js/webcomponents-lite.js"></script>
   <link rel="import" href="/html/components.html">
 </head>
 <body>
-  <section id="content">
-    <form action="/login" method="post">
-      <label>Username</label>
-      <input type="text" class="form-control" name="username">
-
-      <label>Password</label>
-      <input type="password" name="password">
-      <button type="submit">Login</button>
-    </form>
-  </section>
+  <form action="/login" method="post" autocomplete="off" is="deus-login">
+  Loading
+  </form>
 </body>
 </html>
